# vttools

./: README.md  pyproject.toml
docs/: props_backend_requirements.md
examples/: create_table.py
examples/latex/: write_latex.py
examples/latex/report/: write_latex.tex
examples/props/: 01_basic_usage.py  02_capabilities_and_fallback.py  03_parameter_study.py  README.md
src/vttools/: __init__.py  tables.py
src/vttools/Data/: latex.py  tables.py
src/vttools/props/: __init__.py  backend.py  exceptions.py  models.py  service.py
tests/: test_tables.py
tests/props/: test_service.py
