[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vttools"
version = "0.1.0"
description = "Wiederverwendbare Utilities für Verfahrenstechnik-Workflows"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "vttools contributors" }]
dependencies = ["pandas>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
